tests/miniJava/neg/005499_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { int [] System.out.println ; }
